turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:49: error: too many arguments for constructor Array: (_length: Int)Array[T]
  	rule = new Array(Array(Array(1,LEFT,0),Array(1,LEFT,1)),Array(Array(0,NOTURN,0),Array(0,NOTURN,1)))
               ^